# airbag

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: errors.rs  errors_dedup_key.rs  panics.rs
old_examples/: errors_dedup_key.rs  panics.rs
old_src/: alerts.rs  dispatch.rs  prelude.rs  utils.rs
src/: alert.rs  alerts.rs  dispatch.rs  hub.rs  lib.rs  panic_handler.rs  prelude.rs  result.rs  utils.rs
src/backends/: mod.rs  pagerduty.rs  squadcast.rs
src/middleware/: mod.rs
tests/: test_middleware.rs  test_pagerduty.rs  test_squadcast.rs
