[package]
authors = ["vmalloc@gmail.com"]
description = "Library for handling errors and panics using 3rd party services"
edition = "2018"
license = "MIT"
name = "airbag"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.40", features = ["backtrace"]}
crossbeam = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.11.1"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde_json = "1.0.64"
sha2 = "0.9.3"

[dev-dependencies]
env_logger = "0.8.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
