[package]
authors = ["vmalloc@gmail.com"]
description = "Library for handling errors and panics using 3rd party services"
edition = "2018"
homepage = "https://github.com/vmalloc/airbag"
license = "MIT"
name = "airbag"
repository = "https://github.com/vmalloc/airbag"
version = "4.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.40", features = ["backtrace"]}
crossbeam = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.11.1"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde = "1.0.194"
serde_json = "1.0.64"
sha2 = "0.9.3"
typed-builder = "0.18.0"

[dev-dependencies]
clap = {version = "4.4.13", features = ["derive"]}
httpmock = "0.6.8"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
